forgot add JWT_SECRET IN THE .env because login was nt working

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 MONGODB_URI=mongodb+srv://enkhbadralasralt00:HlyYFszV9SZDPZRn@cluster0.l979m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
+JWT_SECRET = MYSECRET
 
  
